--- a/src/template/layout/sections/combustion.html
+++ b/src/template/layout/sections/combustion.html
@@ -12,10 +12,9 @@
 
                     <div class="txt">
                         <p>
-                            Мы проведем для тебя бесплатный мастер-класс, на котором выступит один из участников клуба.
-                            Выступающий – получит возможность собрать во едино его опыт в бизнесе и изложить его.
-                            Ты – услышишь бизнес-исповедь от человека с результатом в твоей стране, твоём городе. Здесь и сейчас.
-                            Или просто с пользой проведешь время.
+                            Мы проведем для тебя бесплатный мастер-класс, на котором выступит один из участников клуба. <br />
+                            Выступающий – получит возможность собрать во едино его опыт в бизнесе и изложить его. <br />
+                            Ты – услышишь бизнес-исповедь от человека с результатом в твоей стране, твоём городе. Здесь и сейчас. Или просто с пользой проведешь время. <br />
                             Как только наберется 10 слушателей – мы в течении 5 дней организуем мастер-класс.
                         </p>
                     </div>
