--- a/src/template/layout/sections/effect.html
+++ b/src/template/layout/sections/effect.html
@@ -7,8 +7,8 @@
             <div class="col-xs-12">
                 <div class="sectionSlide-content">
                     <h2>
-                        Это продолжается неделями, месяцами, годами?
-                        Работа ведется, но не чувствуешь роста в деньгах?
+                        Это продолжается неделями, месяцами, годами? <br />
+                        Работа ведется, но не чувствуешь роста в деньгах? <br />
                         Во сколько раз вырос твой бизнес?
                     </h2>
                 </div>
