--- a/src/template/layout/sections/instrumentsResult.html
+++ b/src/template/layout/sections/instrumentsResult.html
@@ -6,15 +6,20 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="sectionSlide-content">
-                    <h2>
-                        В этом окружении стыдно быть без результата или плавать на том же уровне, с которым ты пришел сюда.
-                        Но не отчаивайся. Если ты не будешь достигать поставленные цели, то тебя исключат из клуба.
-                        Тебе не придется отчитываться и ты сможешь жить как все, в своём уютном мире.
-                    </h2>
 
-                    <p>
-                        <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Инструменты твоего результата" role="button">Записаться на собеседование</button>
-                    </p>
+                    <div class="">
+                        <div class="txt">
+                            <p>
+                                В этом окружении стыдно быть без результата или плавать на том же уровне, с которым ты пришел сюда. <br />
+                                Но не отчаивайся. Если ты не будешь достигать поставленные цели, то тебя исключат из клуба. <br />
+                                Тебе не придется отчитываться и ты сможешь жить как все, в своём уютном мире.
+                            </p>
+                        </div>
+
+                        <p>
+                            <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Инструменты твоего результата" role="button">Записаться на собеседование</button>
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
