--- a/src/assets/style/layout/sections/_combustion.scss
+++ b/src/assets/style/layout/sections/_combustion.scss
@@ -9,7 +9,7 @@
         &-content {
 
             .txt {
-                font-size: 1.5em;
+                font-size: $fz-text-second; /*1.5em*/
                 margin-top: 2em;
 
                 p {
