Убрался фирменный цвет иконки-логотипа

--- a/src/assets/style/layout/_header.scss
+++ b/src/assets/style/layout/_header.scss
@@ -25,7 +25,7 @@
 
                 .fa {
                     /*color: #98ABF8;*/
-                    color: map-get($colors, "bp");
+                    /*color: map-get($colors, "bp");*/
                 }
             }
 
