--- a/src/template/layout/sections/clubProgram.html
+++ b/src/template/layout/sections/clubProgram.html
@@ -66,6 +66,19 @@
                             <li>Экстремальные дни: прыжки с парашюта, с вышек.</li>
                         </ul>
                     </div>
+
+                    <hr />
+
+                    <div class="content">
+                        <h4>Командный бизнес</h4>
+
+                        <div>
+                            <p>Те участники клубов, кто помимо основного бизнеса, открыты для новых проектов.</p>
+                            <p>Формируется отдельная группа в дополнительный день. </p>
+                            <p>Цель: создать новый бизнес.</p>
+                            <p>Инструменты: распределяется работа, вложения, формируется команда, оформляется договор и участники начинают совместную кампанию.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
 
