#clubProgram. Добавил третий второстепенный блок и выровнял блоки: главный сделал по центру второстепенного (инвертнул).

--- a/src/assets/style/layout/sections/_clubProgram.scss
+++ b/src/assets/style/layout/sections/_clubProgram.scss
@@ -9,8 +9,9 @@
         padding: 2em; /*1.5em*/
 
         &-main {
-            margin-right: -30px;
-            padding: 3em 2em; /*1.5em*/
+            margin-right: -31px;
+            margin-top: 6.3em;
+            padding: 2.8em 2em; /*1.5em*/
 
             .title {
                 margin-bottom: 3.5em;
@@ -22,9 +23,9 @@
         }
 
         &-second {
-            margin-top: 1.5em;
-            border-left: 0px solid transparent;
-            border-left: none;
+            /*margin-top: 1.5em;*/
+            /*border-left: 0px solid transparent;
+            border-left: none;*/
 
             .title {
                 background-color: #fff;
