Добавил фирменный второстепенный цвет с прозрачностью 60%.

--- a/src/assets/style/utilites/_vars.scss
+++ b/src/assets/style/utilites/_vars.scss
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
 $colors: (
-    "c_w": $c_w,
-    "bp" : $bp,
-    "bpo": $bpo,
-    "bb" : $bb,
-    "bbo": $bbo,
-    "bs" : $bs
+    "c_w" : $c_w,
+    "bp"  : $bp,
+    "bpo" : $bpo,
+    "bb"  : $bb,
+    "bbo" : $bbo,
+    "bs"  : $bs,
+    "bso" : $bso
 );
 
 $fz-button: 1.3em;
