--- a/src/assets/style/theme/default/_color.scss
+++ b/src/assets/style/theme/default/_color.scss
@@ -6,15 +6,17 @@ $colors-MediumTurquoise         : rgb(72,191,193);       /*#48bfc1*/
 $colors-MediumTurquoise-opacity : rgba(72,191,193, 0.5); /*#48bfc1 50%*/
 $colors-Bastille                : rgb(42,42,53);         /*#2a2a35*/
 $colors-Bastille-opacity        : rgba(42,42,53, 0.6);   /*#2a2a35 60%*/
-$colors-NightRider              : rgb(53, 53, 53);       /*#353535*/
+$colors-NightRider              : rgb(53,53,53);         /*#353535*/
+$colors-NightRider-opacity      : rgba(53,53,53, 0.6);   /*#353535 60%*/
 
 // --------- //
 
-$brand-primary          : $colors-MediumTurquoise;
-$brand-primary-opacity  : $colors-MediumTurquoise-opacity;
-$brand-blackout         : $colors-Bastille;
-$brand-blackout-opacity : $colors-Bastille-opacity;
-$brand-secondary        : $colors-NightRider;
+$brand-primary                  : $colors-MediumTurquoise;
+$brand-primary-opacity          : $colors-MediumTurquoise-opacity;
+$brand-blackout                 : $colors-Bastille;
+$brand-blackout-opacity         : $colors-Bastille-opacity;
+$brand-secondary                : $colors-NightRider;
+$brand-secondary-opacity        : $colors-NightRider-opacity ;
 
 // ------------------------------- //
 
@@ -24,3 +26,4 @@ $bpo : $brand-primary-opacity;
 $bb  : $brand-blackout;
 $bbo : $brand-blackout-opacity;
 $bs  : $brand-secondary;
+$bso : $brand-secondary-opacity;
