--- a/src/assets/style/layout/sections/_reasonsResult.scss
+++ b/src/assets/style/layout/sections/_reasonsResult.scss
@@ -11,7 +11,7 @@
     }
 
     .blackout {
-        background-color: map-get($colors, "bbo"); /*rgba(42,42,53,.8) - 80%*/
+        /*rgba(42,42,53,.8) - 80%*/
     }
 
     .title {
