--- a/src/template/layout/sections/instrumentsResult.html
+++ b/src/template/layout/sections/instrumentsResult.html
@@ -13,58 +13,73 @@
         
         <div class="row">
             <div class="col-xs-12">
-                <div class="chema">
+                <div class="scheme">
                     <div class="row r">
-                        <div class="col-xs-12">
-                            <div class="man">
-                                MAN
+                        <div class="col-xs-12 main main-super">
+                            <div class="line line-horizontal"></div>
+                            <div class="wrapper">
+                                <div class="human">
+                                    <img src="assets/img/instrumentsResult/human.jpg" alt="человечек" />
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!--(.row.r>.col-sm-2.main(.wrapper)+.col-sm-2*5(.wrapper))*5-->
                     <div class="row r">
-                        <div class="col-sm-2 main">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12 main">
                             <div class="wrapper">1 клуб = 8 участников</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Делиться своим опытом и мнением</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">7 разных миров вокруг тебя</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="clearfix visible-md visible-sm"></div>
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Рабочие гипотезы и опыт вместо упреков</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Здоровый скептицизм</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Увидеть кухню других бизнесов</div>
                         </div>
                     </div>
                     <div class="row r">
-                        <div class="col-sm-2 main">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12 main">
                             <div class="wrapper">Организация встречи</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Дисциплина для рабочей атмосферы</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Контролирующий тайминг на каждой рабочей встрече</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="clearfix visible-md visible-sm"></div>
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">
                                 20 минут на выступающего. <br />
                                 Четкая формулировка мыслей
                             </div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">
                                 FreeTime. <br />
                                 После встречи свободное общение и дообсуждения, если необходимо.
                             </div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">
                                 WorkTime. <br />
                                 До встречи – друзья. После встречи – друзья. <br />
@@ -73,74 +88,92 @@
                         </div>
                     </div>
                     <div class="row r">
-                        <div class="col-sm-2 main">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12 main">
                             <div class="wrapper">Организация места</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">
                                 Время FreeTime неограничего. <br />
                                 Хоть до раннего утра
                             </div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">
                                 Звонок во время рабочей недели. <br />
                                 Сверка с планом на неделю
                             </div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="clearfix visible-md visible-sm"></div>
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">4 комнаты для переговоров с «глазу на глаз»</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Помощница во время встречи</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Чай, кофе и сок, фрукты и овощи, сдобное и диетическое</div>
                         </div>
-                        <div class="col-sm-2"> <!-- На новой строке будет 7ая колонка -->
+                        <div class="c col-lg-2 col-md-3 col-sm-3 col-xs-12"> <!-- На новой строке будет 7ая колонка -->
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Без лишних ушей. Во всем помещении только участники закрытого клуба</div>
                         </div>
                     </div>
                     <div class="row r">
-                        <div class="col-sm-2 main">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12 main">
                             <div class="wrapper">
                                 Халява = 0. <br />
                                 Вложил-получил
                             </div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">
                                 Каждый участник по очереди становится ведущим встречи. <br />
                                 Лидерство. Энергия. Опыт
                             </div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Кто вкладывает энергию от себя, тот и возвращает инвестиции</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="clearfix visible-md visible-sm"></div>
+                        <div class="c col-lg-2 col-md-6 col-sm-6 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Вкладываешь свой опыт и знания – получаешь в 7 раз больше в ответ</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-6 col-sm-6 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">Сам факт оплаты за занятие, даже не большой суммы, заставляет по другому относиться к занятиям</div>
                         </div>
                     </div>
                     <div class="row r">
-                        <div class="col-sm-2 main">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12 main">
                             <div class="wrapper">5. БлаБлабЛА</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">5.1</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">5.2</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="clearfix visible-md visible-sm"></div>
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">5.3</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">5.4</div>
                         </div>
-                        <div class="col-sm-2">
+                        <div class="c col-lg-2 col-md-4 col-sm-4 col-xs-12">
+                            <div class="line line-vertical"></div>
                             <div class="wrapper">5.5</div>
                         </div>
                     </div>
