--- a/src/assets/style/layout/_modalOrder.scss
+++ b/src/assets/style/layout/_modalOrder.scss
@@ -5,15 +5,44 @@
     .modal {
 
         &-content {
-
+            padding: 30px 50px 50px;
         }
 
         &-header {
-
+            border-bottom: none;
+            
+            .close {
+                font-size: 3em;
+                font-weight: 100;
+                transition: all 300ms ease;
+            }
+            
+            .modal-title {
+                @extend %font-PT_Serif;
+                color: map-get($colors, "bs");
+                font-size: 1.71428571em;
+            }
+        }
+        
+        &-body {
+            
+            .btn {
+                
+                &-main {
+                    background-color: map-get($colors, "bpo");
+                    color: map-get($colors, "bs");
+                    min-width: 100%;
+                    
+                    &:hover {
+                        background-color: map-get($colors, "bp");
+                        color: map-get($colors, "c_w");
+                    }
+                }
+            }
         }
 
         &-footer {
-
+            border-top: none;
         }
     }
 }
