Подправил метку кнопки (куда кдикнули) в шапке.

--- a/src/template/layout/header.html
+++ b/src/template/layout/header.html
@@ -23,7 +23,7 @@
                         <p class="desc">Запись на собеседование</p>
                         <p class="phone">+375 (29) 6-377-311</p>
                         <p>
-                            <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Шапка" role="button">Консультация</button>
+                            <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="[Шапка] - Консультация" role="button">Консультация</button>
                         </p>
                     </div>
                 </div>
@@ -38,7 +38,7 @@
                         личным доходом от 35 млн. руб.*
                     </h1>
                     <p>
-                        <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="Шапка" role="button">Присоединиться</button>
+                        <button type="button" class="btn btn-main" data-toggle="modal" data-target="#modalOrder" data-service="[Шапка] - Присоединиться" role="button">Присоединиться</button>
                     </p>
 
                     <div class="smTxt">
