--- a/src/template/layout/header.html
+++ b/src/template/layout/header.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="top">
-                    <div class="pull-left">
+                    <div class="bl-left">
                         <div class="logo">
                             <p>
                                 <i class="fa fa-diamond" aria-hidden="true"></i>
@@ -19,7 +19,7 @@
                             <p>Бизнес-клуб закрытого типа в Минске</p>
                         </div>
                     </div>
-                    <div class="pull-right">
+                    <div class="bl-right">
                         <p class="desc">Запись на собеседование</p>
                         <p class="phone">+375 (29) 6-377-311</p>
                         <p>
