--- a/src/template/layout/sections/reasonsResult.html
+++ b/src/template/layout/sections/reasonsResult.html
@@ -65,7 +65,7 @@
                                         <div class="arrow"></div>
                                     </div>
                                 </div>
-                                <div class="reson-offset reson-offset-left col-reson-offset-xs-right reson-arrow-top hidden-xs">
+                                <div class="reson-offset reson-offset-left col-reson-offset-xs-right reson-arrow-top hidden-xs m992">
                                     <div class="arrow-block">
                                         <div class="arrow"></div>
                                     </div>
@@ -126,7 +126,7 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-11 col-sm-12">
-                                <div class="reson-offset reson-offset-right">
+                                <div class="reson-offset reson-offset-right m992">
                                     <div class="arrow-block">
                                         <div class="arrow"></div>
                                     </div>
