--- a/src/assets/style/base/_common.scss
+++ b/src/assets/style/base/_common.scss
@@ -22,6 +22,7 @@
 
 html {
     font-size: 24px;
+    min-width: 320px;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     width: 100%;
 }
@@ -35,6 +36,10 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
             font-smoothing: antialiased;
     -webkit-font-smoothing: antialiased;
+            
+    @media only screen and (max-width: 320px) {
+        /*font-size: 12px;*/
+    }
 }
 
 a {
