--- a/src/assets/style/layout/_header.scss
+++ b/src/assets/style/layout/_header.scss
@@ -13,8 +13,13 @@
         margin-top: 3.2em;
         overflow: hidden;
 
-        .pull-left {
+        .bl-left {
+            float: left;
             /*text-align: center;*/
+            
+            @media only screen and (max-width: 479px) {
+                float: none;
+            }
 
             .logo {
                 font-size: 2em;
@@ -37,8 +42,14 @@
             }
         }
 
-        .pull-right {
+        .bl-right {
+            float: right;
             /*text-align: center;*/
+            
+            @media only screen and (max-width: 479px) {
+                float: none;
+                margin-top: 30px;
+            }
 
             p {
 
@@ -66,12 +77,28 @@
 
     .header-content {
         margin: 7em auto 15em;
+            
+        @media only screen and (max-width: 479px) {
+            margin: 4em auto 7em;
+        }
 
         h1 {
             @extend %font-PT_Serif;
             font-size: 3.428571429em;
             margin-bottom: 0.5em;
             /*text-align: center;*/
+            
+            @media only screen and (max-width: 767px) {
+                font-size: 1.8em;
+            }
+            
+            @media only screen and (min-width: 768px) and (max-width: 991px) {
+                font-size: 2em;
+            }
+            
+            @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                font-size: 2.4em;
+            }
         }
 
         .btn {
