--- a/src/assets/style/layout/_modalOrder.scss
+++ b/src/assets/style/layout/_modalOrder.scss
@@ -6,6 +6,10 @@
 
         &-content {
             padding: 30px 50px 50px;
+            
+            @media only screen and (max-width: 479px) {
+                padding: 15px 25px 25px;
+            }
         }
 
         &-header {
