--- a/src/assets/style/layout/sections/_combustion.scss
+++ b/src/assets/style/layout/sections/_combustion.scss
@@ -3,6 +3,22 @@
 #combustion {
     background-image: url('../img/combustion/bg_1.jpg');
     padding: 9em 0;
+            
+    @media only screen and (max-width: 479px) {
+        padding: 5em 0;
+    }
+            
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+        padding: 6em 0;
+    }
+
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+        padding: 7em 0;
+    }
+
+    @media only screen and (min-width: 992px) and (max-width: 1199px) {
+        padding: 8em 0;
+    }
 
     .sectionSlide {
 
@@ -11,6 +27,18 @@
             .txt {
                 font-size: $fz-text-second; /*1.5em*/
                 margin-top: 2em;
+            
+                @media only screen and (max-width: 767px) {
+                    font-size: 1.1em;
+                }
+
+                @media only screen and (min-width: 768px) and (max-width: 991px) {
+                    font-size: 1.3em;
+                }
+
+                @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                    font-size: 1.5em;
+                }
 
                 p {
                     line-height: 1.2em;
@@ -21,6 +49,18 @@
             .seats {
                 font-size: 2em;
                 margin-top: 2em;
+            
+                @media only screen and (max-width: 767px) {
+                    font-size: 1.3em;
+                }
+
+                @media only screen and (min-width: 768px) and (max-width: 991px) {
+                    font-size: 1.5em;
+                }
+
+                @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                    font-size: 1.7em;
+                }
 
                 img {
                     width: 50px;
@@ -34,6 +74,10 @@
                     /*font-size: 1.5em;*/
                     font-size: $fz-button;
                     margin-top: 0.6em;
+
+                    @media only screen and (max-width: 400px) {
+                        font-size: 0.95em;
+                    }
                 }
             }
         }
