--- a/src/assets/style/layout/sections/_instrumentsResult.scss
+++ b/src/assets/style/layout/sections/_instrumentsResult.scss
@@ -7,8 +7,42 @@
     padding-bottom: 3.571428571em; /*50px*/
     position: relative;
     
+    .title {
+        
+        h2 {
+            
+            @media only screen and (max-width: 767px) {
+                font-size: 1.5em;
+            }
+            
+            @media only screen and (min-width: 768px) and (max-width: 991px) {
+                font-size: 1.8em;
+            }
+            
+            @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                font-size: 2.0em;
+            }            
+        }
+    }
+    
     .scheme {
         margin-bottom: 5em;
+            
+        @media only screen and (max-width: 479px) {
+            margin-bottom: 1em;
+        }
+
+        @media only screen and (min-width: 480px) and (max-width: 767px) {
+            margin-bottom: 2em;
+        }
+
+        @media only screen and (min-width: 768px) and (max-width: 991px) {
+            margin-bottom: 3em;
+        }
+
+        @media only screen and (min-width: 992px) and (max-width: 1199px) {
+            margin-bottom: 4em;
+        }
         
         .r {
             border-left: 1px solid map-get($colors, "bpo");
@@ -98,6 +132,22 @@
             background-color: map-get($colors, "bso");
             padding: 5em 0;
             text-align: center;
+            
+            @media only screen and (max-width: 479px) {
+                padding: 1em 0;
+            }
+
+            @media only screen and (min-width: 480px) and (max-width: 767px) {
+                padding: 2em 0;
+            }
+
+            @media only screen and (min-width: 768px) and (max-width: 991px) {
+                padding: 3em 0;
+            }
+
+            @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                padding: 4em 0;
+            }
 
             p {
 
@@ -106,6 +156,18 @@
             .txt {
                 font-size: $fz-text-second; /*1.5em*/
                 /*margin-top: 2em;*/
+            
+                @media only screen and (max-width: 767px) {
+                    font-size: 1.1em;
+                }
+
+                @media only screen and (min-width: 768px) and (max-width: 991px) {
+                    font-size: 1.3em;
+                }
+
+                @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                    font-size: 1.5em;
+                }
 
                 p {
                     line-height: 1.2em;
@@ -120,6 +182,10 @@
                     /*font-size: 1.5em;*/
                     font-size: $fz-button;
                     /*margin-top: 2em;*/
+
+                    @media only screen and (max-width: 400px) {
+                        font-size: 0.95em;
+                    }
                 }
             }
         }
