--- a/src/assets/style/layout/sections/_reasonsResult.scss
+++ b/src/assets/style/layout/sections/_reasonsResult.scss
@@ -6,8 +6,31 @@
     padding-bottom: 3.571428571em; /*50px*/
     position: relative;
 
+    .m992 {
+
+        @media only screen and (min-width: 768px) and (max-width: 991px) {
+            height: 176px;
+        }
+
+        @media only screen and (min-width: 992px) and (max-width: 1200px) {
+            height: 131px;
+        }
+    }
+    
     h3 {
         font-size: 1.714285714em;
+            
+        @media only screen and (max-width: 767px) {
+            font-size: 1.3em;
+        }
+
+        @media only screen and (min-width: 768px) and (max-width: 991px) {
+            font-size: 1.5em;
+        }
+
+        @media only screen and (min-width: 992px) and (max-width: 1199px) {
+            font-size: 1.7em;
+        }
     }
 
     .blackout {
@@ -18,6 +41,18 @@
 
         h2 {
             /*color: rgb(91, 198, 198);*/
+            
+            @media only screen and (max-width: 767px) {
+                font-size: 1.5em;
+            }
+            
+            @media only screen and (min-width: 768px) and (max-width: 991px) {
+                font-size: 1.8em;
+            }
+            
+            @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                font-size: 2.0em;
+            }
         }
     }
 
@@ -149,6 +184,10 @@
             position: relative;
             text-align: center;
             z-index: 99;
+
+            @media only screen and (min-width: 768px) and (max-width: 991px) {
+                padding: 2.857142857em 1.0em;
+            }
 
             h3 {
                 margin-top: 0;
