--- a/src/assets/style/modules/_sectionSlide.scss
+++ b/src/assets/style/modules/_sectionSlide.scss
@@ -10,10 +10,38 @@
         h2 {
             @extend %font-PT_Serif;
             font-size: 2.3em; /*2.5em 2.142857143em*/
+            
+            @media only screen and (max-width: 767px) {
+                font-size: 1.5em;
+            }
+            
+            @media only screen and (min-width: 768px) and (max-width: 991px) {
+                font-size: 1.8em;
+            }
+            
+            @media only screen and (min-width: 992px) and (max-width: 1199px) {
+                font-size: 2.0em;
+            }
         }
     }
 }
 
 section.sectionSlide {
     padding: 17.5em 0;
+            
+    @media only screen and (max-width: 479px) {
+        padding: 7em 0;
+    }
+            
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+        padding: 10em 0;
+    }
+
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+        padding: 14em 0;
+    }
+
+    @media only screen and (min-width: 992px) and (max-width: 1199px) {
+        padding: 17.5em 0;
+    }
 }
