--- a/src/template/layout/sections/clubProgram.html
+++ b/src/template/layout/sections/clubProgram.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-sm-7">
+            <div class="col-sm-6 col-md-6 col-lg-7">
                 <div class="prgBlock prgBlock-main">
                     <div class="title">
                         <h2>Основная программа клуба:</h2>
@@ -25,7 +25,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-5">
+            <div class="col-sm-6 col-md-6 col-lg-5">
                 <div class="prgBlock prgBlock-second">
                     <div class="title">
                         <h3>Желающие, принимают участие:</h3>
