--- a/src/template/layout/sections/reasonsResult.html
+++ b/src/template/layout/sections/reasonsResult.html
@@ -12,8 +12,31 @@
                 </div>
             </div>
         </div>
-
+       
         <div class="row circulation">
+            
+            <div class="col-xs-12 visible-xs">
+                <div class="reson reson-main reson-xs">
+                    <h3>Окружение:</h3>
+                    <p>
+                        Посчитай на раз-два-три
+                    </p>
+                    <div class="list">
+                        <ol type="1">
+                            <li>
+                                5 человек, с кем ты проводишь больше всего времени (родственники, друзья, знакомые).
+                            </li>
+                            <li>Запиши их заработок.</li>
+                            <li>Раздели на 5. Вот твой доход.</li>
+                        </ol>
+                    </div>
+                    <p>
+                        То же самое с физическим состоянием и в отношениях.
+                        Ты = среднее между теми, с кем ты общаешься.
+                    </p>
+                    <!--<img src="assets/img/reasonsResult/bankOfCucumbers.jpg" alt="банка огурцов" />-->
+                </div>
+            </div>
 
             <div class="col-xs-12">
 
