Изменения в тексте маленькие. + убрал эффект паралакса при размере ширины меньше 768px

--- a/src/assets/style/layout/sections/_instrumentsResult.scss
+++ b/src/assets/style/layout/sections/_instrumentsResult.scss
@@ -7,6 +7,10 @@
     padding-bottom: 3.571428571em; /*50px*/
     position: relative;
     
+    .blackout {
+        background-color: rgba(42,42,53,.9);
+    }
+    
     .title {
         
         h2 {
