--- a/src/template/layout/sections/goose.html
+++ b/src/template/layout/sections/goose.html
@@ -7,7 +7,7 @@
             <div class="col-xs-12">
                 <div class="sectionSlide-content">
                     <h2>
-                        Вроде CRM настроена, скрипты и гайды внедрены, поставщики адекватные, лиды есть, продажи есть, даже к помощнице не придраться. <br />
+                        Вроде CRM настроена, скрипты и гайды внедрены, поставщики адекватные, лиды есть, продажи есть, даже к помощнице не придраться. <br /><br />
                         Но все равно чувствуешь себя Гусем.
                     </h2>
                 </div>
